gcc/testsuite/rust/rustc/ui/error-codes/E0040.rs
struct Foo {
    x: i32,
}

impl Drop for Foo {
    fn drop(&mut self) {
        println!("kaboom");
    }
}

fn main() {
    let mut x = Foo { x: -7 };
    x.drop();
// { dg-error ".E0040." "" { target *-*-* } .-1 }
}

